<resources>
    <string name="app_name">Wanderlust Explorer</string>
    <string name="label_populer">Populer di sekitar kamu 🔥</string>
    <string name="hint_search_destination">Cari destinasi...</string>
    <string name="username">Richard Lois</string>
    <string name="user_desc">Penjelajah</string>
    <string name="example_email">richardlois1@gmail.com</string>
    <string name="about">About</string>
    <string name="destination_location">%1$s |</string>
    <string name="destination_rating">%1$s/5</string>
    <string name="destination_reviews">%1$s Review</string>
</resources>