<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.MainActivity"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/about_page"
                android:src="@drawable/profile"
                android:scaleType="fitXY"
                android:background="?attr/selectableItemBackground"
                app:shapeAppearanceOverlay="@style/CircleImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="12dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/user_desc"
                app:layout_constraintStart_toEndOf="@id/about_page" />

            <TextView
                android:id="@+id/user_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_desc"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/username"
                app:layout_constraintBottom_toBottomOf="@id/about_page"
                app:layout_constraintStart_toEndOf="@id/about_page" />

            <ImageButton
                android:id="@+id/img_notification"
                android:src="@drawable/ic_notification"
                android:scaleType="fitXY"
                android:background="?attr/selectableItemBackground"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="12dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_search"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/outline_grey"
                app:boxCornerRadiusTopStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusBottomEnd="24dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/about_page"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_search_destination"
                    android:drawableEnd="@drawable/baseline_search_24"
                    android:padding="12dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/label_popular"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_populer"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="18dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/container_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_destination"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_popular"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>